Add collaborator name

--- a/Exercise_1/sheet1.ipynb
+++ b/Exercise_1/sheet1.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "GROUPNAME = \"Group38\"\n",
-    "COLLABORATORS = \"Marcel Ebert, Josef Heinrich Trömer\""
+    "COLLABORATORS = \"Marcel Ebert, Josef Heinrich Trömer, Yihong Sheng\""
    ]
   },
   {
